--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "nodemon index.js"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "sucrase": "^3.17.1"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
