--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "nodemon index.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "socket.io": "^4.0.0",
     "sucrase": "^3.17.1"
   },
   "devDependencies": {
